# python-for-android

./: .coveragerc  .deepsource.toml  .dockerignore  .env  .gitignore  .readthedocs.yaml  .travis.yml  .travis.yml.unused  123  Aderent  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Digital calculator  Dockerfile  Dockerfile.py2  Dockerfile.py3  FAQ.md  Game  Game XO  MANIFEST.in  Makefile  Project1  README.md  README.rst  RELEASING.md  TXT3000  calculator.py  configure.sh  corna informer.py  cythonizer.py  distribute.sh  setup.py  tictoe  toolchain.py  tox.ini
.github/: ISSUE_TEMPLATE.md  support.yml
.github/workflows/: custom-build.yml  docker.yml  push.yml  pypi-release.yml  support.yml
bootstrap/common/: build.py
bootstrap/legacy/: bootstrap.properties  build.py  local.properties
bootstrap/minimal/: bootstrap.properties
bootstrap_templates/p4a_pygame/jni/sdl_mixer/: CHANGES  Makefile.in  README  SDL_mixer.qpg  SDL_mixer.qpg.in  configure.in  effect_stereoreverse.c  effects_internal.c  load_voc.c  load_voc.h  music.c  music_cmd.c  music_mad.h  music_mod.c  music_mod.h  music_ogg.c
bootstrap_templates/p4a_pygame/jni/sdl_mixer/native_midi/: native_midi_win32.c
bootstrap_templates/p4a_pygame/jni/sdl_mixer/native_midi_gpl/: README  gsvoices.h  native_midi_gpl.c  readmidi_native.c
bootstrap_templates/p4a_pygame/jni/sdl_mixer/timidity/: common.c  config.h  ctrlmode.c  instrum.h  sdl_c.c  tables.h
bootstrap_templates/p4a_pygame/jni/tremor/: Android.mk  Makefile.am  vorbisfile.c
bootstrap_templates/sdl2/: AndroidManifest.xml  build.py
ci/: constants.py  osx_ci.sh  rebuild_updated_recipes.py  run_emulator_tests.sh
ci/makefiles/: android.mk  osx.mk
doc/: Makefile  make.bat  requirements.txt
doc/source/: apis.rst  bootstraps.rst  buildoptions.rst  commands.rst  conf.py  contact.rst  contribute.rst  distutils.rst  docker.rst  faq.rst  gettingstarted.rst  index.rst  launcher.rst  old_p4a.rst  quickstart.rst  recipes.rst  related.rst  services.rst  testing_pull_requests.rst  troubleshooting.rst  workers.rst
docs/: .gitignore  Makefile  make.bat
docs/source/: activity.rst  android.rst  conf.py  contribute.rst  customize.rst  example_compass.rst  example_helloworld.rst  example_manifest.rst  examples.rst  extend.rst  faq.rst  helloworld.rst  howitworks.rst  index.rst  introduction.rst  javaapi.rst  prerequisites.rst  recipes.rst  related.rst  toolchain.rst  usage.rst
pythonforandroid/: Aktienradar  __init__.py  androidndk.py  appandroid.py  archs.py  bdist_apk.py  bdistapk.py  bootstrap.py  build.py  checkdependencies.py  distribution.py  download.py  entrypoints.py  graph.py  logger.py  mergedargsparser.py  meson_python.py  patching.py  permissions.py  prerequisites.py  python.py  pythonpackage.py  recipe.py  recipebases.py  recipebuild.py  recommendations.py  sh.py  toolchain.py  util.py
pythonforandroid/bootstraps/: build.gradle  gradle.properties  settings.gradle
pythonforandroid/recipes/: ndghttpsclient
pythonforandroid/tools/: biglink  liblink  liblink.sh
recipes/: recipe.sh.tmpl
recipes/android/: __init__.py  recipe.sh
recipes/androidsdl2/: __init__.py
recipes/apsw/: recipe.sh
recipes/astropy/: recipe.sh
recipes/audiostream/: recipe.sh
recipes/bidi/: recipe.sh
recipes/boost/: project-config.jam  recipe.sh  user-config.jam
recipes/c_igraph/: Makefile.am.patch  arith.h  config.h.patch  makefile.u.patch  recipe.sh  sysdep1.h.patch  uninit.c.patch
recipes/cherrypy/: recipe.sh
recipes/chipmunk/: recipe.sh
recipes/cjklib/: recipe.sh
recipes/click/: recipe.sh
recipes/cprotobuf/: recipe.sh
recipes/cymunk/: recipe.sh
recipes/django/: recipe.sh
recipes/docutils/: recipe.sh
recipes/ecdsa/: recipe.sh
recipes/enum34/: recipe.sh
recipes/evdev/: recipe.sh
recipes/eventlet/: recipe.sh
recipes/ffmpeg/: recipe.sh
recipes/ffmpeg2/: recipe.sh
recipes/ffpyplayer/: recipe.sh
recipes/ffpyplayer_codecs/: recipe.sh
recipes/ffpyplayer_tito/: recipe.sh
recipes/flask/: recipe.sh
recipes/flufl/: recipe.sh
recipes/freetype/: recipe.sh
recipes/gevent/: recipe.sh
recipes/gnutls/: recipe.sh
recipes/greenlet/: recipe.sh
recipes/harfbuzz/: recipe.sh
recipes/hostpython/: Setup  recipe.sh
recipes/hostpython2/: __init__.py
recipes/igraph/: Makefile.am.patch  config.h.in.patch  config.h.patch  configure.ac.patch  get_platform.py  recipe.sh  setup.cfg.patch  setup.py.patch
recipes/itsdangerous/: recipe.sh
recipes/jinja2/: recipe.sh
recipes/jpeg/: recipe.sh
recipes/kivent/: recipe.sh
recipes/kivent_core/: recipe.sh
recipes/kivent_cymunk/: recipe.sh
recipes/kivy/: __init__.py  recipe.sh
recipes/kivy_stable/: recipe.sh
recipes/kivymd/: recipe.sh
recipes/kivysdl2/: __init__.py  android_sdl2_compat.patch
recipes/leveldb/: recipe.sh
recipes/libev/: recipe.sh
recipes/libevent/: recipe.sh
recipes/libffi/: recipe.sh
recipes/libgmp/: recipe.sh
recipes/libpq/: recipe.sh
recipes/libuuid/: recipe.sh
src/: AndroidManifest.xml  android_redirect.c  android_redirect.h  blacklist.txt  build.py  build.xml
test_builds/: test.sh
testapps/: setup_keyboard.py  setup_pygame.py  setup_testapp_flask.py  setup_testapp_python2.py  setup_testapp_python2_sqlite_openssl.py  setup_testapp_python2legacy_sqlite_openssl.py  setup_testapp_python3.py  setup_testapp_python3_matplotlib.py  setup_testapp_python3_pillow.py  setup_testapp_python3_sqlite_openssl.py  setup_testapp_python3crystax.py  setup_testapp_python_encryption.py  setup_testapp_service.py  setup_vispy.py
tests/: test_androidmodule_ctypes_finder.py  test_androidndk.py  test_archs.py  test_bdistapk.py  test_bootstrap.py  test_bootstrap_build.py  test_build.py  test_checkdependencies.py  test_distribution.py  test_entrypoints.py  test_entrypoints_python2.py  test_graph.py  test_logger.py  test_patching.py  test_prerequisites.py  test_pythonpackage.py  test_pythonpackage_basic.py  test_recipe.py  test_recommendations.py  test_toolchain.py  test_util.py  util.py
tools/: biglink  check_headers.py  depsort.py  distribute.functions.sh
(+1506 files in other folders)
